@@ -1,7 +1,8 @@
 Change history for Net-Easypost
 
 {{$NEXT}}
-
+            - Remove Mojo::UserAgent in favor of HTTP::Tiny
+            
 0.16        2015-12-29
             - Minor changes, mostly formatting and build configuration
             - Now have an explicit cpanfile and Makefile.PL in the release in case some don't want to use Dist::Zilla
